api/swim_schema/src/schema/tests/derive/validated_form/generic_no_default.stderr
error[E0277]: the trait bound `S<Invalid>: RecognizerReadable` is not satisfied
   --> $DIR/src/schema/tests/derive/validated_form/generic_no_default.rs:30:29
    |
30  |     let _s = Form::as_value(&S { a: 1, f: Invalid });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^ the trait `RecognizerReadable` is not implemented for `S<Invalid>`
    |
    = note: required because of the requirements on the impl of `StructuralReadable` for `S<Invalid>`
note: required by `as_value`
   --> $WORKSPACE/api/swim_form/src/lib.rs
    |
    |     fn as_value(&self) -> Value {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `S<Invalid>: StructuralWritableMap` is not satisfied
   --> $DIR/src/schema/tests/derive/validated_form/generic_no_default.rs:30:29
    |
30  |     let _s = Form::as_value(&S { a: 1, f: Invalid });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^ the trait `StructuralWritableMap` is not implemented for `S<Invalid>`
    |
    = note: required because of the requirements on the impl of `StructuralWritable` for `S<Invalid>`
note: required by `as_value`
   --> $WORKSPACE/api/swim_form/src/lib.rs
    |
    |     fn as_value(&self) -> Value {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `S<Invalid>: ExactSizeIterator` is not satisfied
   --> $DIR/src/schema/tests/derive/validated_form/generic_no_default.rs:30:29
    |
30  |     let _s = Form::as_value(&S { a: 1, f: Invalid });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExactSizeIterator` is not implemented for `S<Invalid>`
    |
    = note: required because of the requirements on the impl of `StructuralWritable` for `S<Invalid>`
note: required by `as_value`
   --> $WORKSPACE/api/swim_form/src/lib.rs
    |
    |     fn as_value(&self) -> Value {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `for<'a> &'a S<Invalid>: ExactSizeIterator` is not satisfied
   --> $DIR/src/schema/tests/derive/validated_form/generic_no_default.rs:30:14
    |
30  |     let _s = Form::as_value(&S { a: 1, f: Invalid });
    |              ^^^^^^^^^^^^^^ the trait `for<'a> ExactSizeIterator` is not implemented for `&'a S<Invalid>`
    |
    = note: required because of the requirements on the impl of `StructuralWritable` for `S<Invalid>`
note: required by `as_value`
   --> $WORKSPACE/api/swim_form/src/lib.rs
    |
    |     fn as_value(&self) -> Value {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
